--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -91,3 +91,32 @@ copy-button button {
   }
 
 }
+
+
+.activities {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.activities__item {
+  text-align: center;
+  flex: 0 0 160px;
+  margin: 20px;
+  justify-content: center;
+
+  a {
+    color: black;
+  }
+
+  i {
+    font-size: 60px;
+    line-height: 80px;
+    margin-bottom: 20px;
+  }
+
+  .activities__item__progress {
+    margin-top: 10px;
+  }
+
+}
