Drop the old SCSS files and use the theme SCSS files.

--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -1,80 +1,3 @@
-@import "activities";
-@import "elm-plot";
-@import "login";
-@import "patients";
+@import "variables";
 
-.hidden.menu {
-  display: none;
-}
-
-.masthead.segment {
-  padding: 1em 0em;
-}
-.masthead .logo.item img {
-  margin-right: 1em;
-}
-.masthead .ui.menu .ui.button {
-  margin-left: 0.5em;
-}
-
-.footer.segment {
-  padding: 5em 0em;
-}
-
-.secondary.pointing.menu .toc.item {
-  display: none;
-}
-
-@media only screen and (max-width: 700px) {
-  .ui.fixed.menu {
-    display: none !important;
-  }
-  .secondary.pointing.menu .item,
-  .secondary.pointing.menu .menu {
-    display: none;
-  }
-  .secondary.pointing.menu .toc.item {
-    display: block;
-  }
-}
-
-.ui.menu .item img.logo {
-  margin-right: 1.5em;
-}
-.main.container {
-  margin-top: 5em;
-}
-.ui.footer.segment {
-  margin: 5em 0em 0em;
-  padding: 5em 0em;
-}
-
-.ui.main.grid {
-    left: 18.75%;
-    position: relative;
-    width: 81.25%;
-
-    & > div {
-        width: 100%;
-    }
-}
-
-.ui.grid>.ui.grid:first-child {
-    margin-top: 40px;
-}
-
-.ui.statistics>.statistic-wrapper.statistic {
-  margin-right: 55px;
-
-  & .label {
-    margin-bottom: 30px;
-  }
-
-}
-
-copy-button button {
-  height: 37px;
-}
-
-/* Importing the theme style. */
-@import "medical_theme/style";
+@import "custom";
