--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -61,6 +61,11 @@ body {
 
   &.full {
     padding-bottom: 20px;
+    
+    .actions {
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
   }
 
   &.head {
