--- a/client/src/assets/scss/patches/theme-light-patch.scss
+++ b/client/src/assets/scss/patches/theme-light-patch.scss
@@ -6,5 +6,13 @@
   input[type=number]:focus {
     background: #f2f2f2;
     color: #666;
+    border: 0;
+    font-size: 2rem;
+    border-radius: 0;
+    padding: 0 0.5em;
+    line-height: 0.5;
+    width: 263px;
+    text-align: right;
+    height: 50px;
   }
 }
