--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -1,6 +1,12 @@
 // Variables
 
-$color-primary: #16cafb;
+
+$color-primary:    #06b9ff;
+$color-text:       #808080;
+$color-background: #ccc;
+
+$font:             Nunito, Arial, sans-serif;
+$font-alt:         Heebo, Arial, sans-serif;
 
 $color-primary-light: $color-primary;
 $color-primary-dark: $color-primary;
