--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -126,7 +126,7 @@ a {
   background: #fff;
   border: 0;
   padding: 0.6em 1.8em;
-  height: 48px; 
+  height: 48px;
   position: relative;
   margin-right: 20px;
   box-shadow: -2px -2px 5px 0 rgba(0,0,0,0.12);
@@ -386,13 +386,23 @@ h3.ui.header {
   border-radius: 50%;
   width: 100%;
   height: 100%;
-  background: url(#{$img-path}icon-baby-grey.svg) no-repeat center;
+  &.child {
+    background: url(#{$img-path}icon-baby-grey.svg) no-repeat center;
+  }
+  &.mother {
+    background: url(#{$img-path}icon-mother-grey.svg) no-repeat center;
+  }
   background-size: 37px 55px;
   background-color: $color-background;
 
   .active & {
     background-color: $color-primary;
-    background-image: url(#{$img-path}icon-baby-white.svg);
+    &.child {
+      background-image: url(#{$img-path}icon-baby-white.svg);
+    }
+    &.mother {
+      background-image: url(#{$img-path}icon-mother-white.svg);
+    }
     background-size: 37px 55px;
   }
 }
