--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -787,7 +787,7 @@ input::placeholder {
 
 .icon-mother,
 .icon-baby,
-.icon-completed {
+.icon-activity {
   width: 54px;
   height: 54px;
   display: block;
@@ -803,8 +803,8 @@ input::placeholder {
   background-size: 25px 34px;
 }
 
-.icon-completed {
-  background: url(#{$img-path}icon-completed.svg) no-repeat center;
+.icon-activity {
+  background: url(#{$img-path}activities.svg) no-repeat center;
   background-size: 26px 24px;
 }
 
