Implement new markup for login screen, and integrate into app.

--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -1,3 +1,7 @@
+// These first two are as provided by the designer
 @import "variables";
 
 @import "custom";
+
+// These are additional things not provided by the designer.
+@import "app";
