Fix CSS for layering of active tab.

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -201,6 +201,8 @@ a {
   background: $color-primary;
   margin-bottom: 0;
   border-radius: 0 !important;
+  z-index: 300;
+  position: relative;
 
   &:after {
     border-color: transparent transparent transparent $color-primary;
