Add markup for the End Session dialog.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -28,21 +28,18 @@ a {
 //
 // The position: fixed etc. will size the overlay to be 100% of the viewport.
 //
-// The z-index will put this in front of the other stuff.
+// The z-index will put this in front of the other stuff, blocking clicks to
+// other things.
 //
 // The background-color dims everything that isn't in the modal itself (i.e.
 // the other stuff).
-//
-// TODO: Ideally, we'd also like to block interaction with everything that
-// isn't inside the modal. For the moment, we're doing this manually ...  that
-// is, we disable event handlers without any particular magic.
 .overlay {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 10;
+  z-index: 35000;
   background-color: rgba(0,0,0,0.5);
 }
 
